fix the right white space bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Slackey&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Slackey&display=swap");
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
+  overflow: hidden;
+  width: 100vw;
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
